--- a/MasterPage.master
+++ b/MasterPage.master
@@ -87,23 +87,22 @@
          }
     </style>
     <script>
+        var returnval;
         function name()
         {
             var name = document.getElementById("txtname").value;
            
             if (name == "") {
                 document.getElementById("nameerror").innerHTML = "Name is Empty";
-                return false;
             }
             else if(!isNaN(name))
             {
                 document.getElementById("nameerror").innerHTML = "Name is invalid";
-                return false;
             }
             else
             {
                 document.getElementById("nameerror").innerHTML = "";
-                return true;
+                
             }
         }
         function email()
@@ -114,15 +113,13 @@
             var dotposition = email.dotposition;
             if (email == "") {
                 document.getElementById("emailerror").innerHTML = "email is Empty";
-                return false;
             }
             else if (atposition < 1 || dotposition < atposition + 2 || dotposition + 2 >= email.length) {
                 document.getElementById("emailerror").innerHTML = "email is not correct";
-                return false;
             }
             else {
                 document.getElementById("emailerror").innerHTML = "";
-                return true;
+                
             }
            
         }
@@ -132,11 +129,10 @@
             if(password=="")
             {
                 document.getElementById("passerror").innerHTML = "password is Empty";
-                return false;
             }
             else {
                 document.getElementById("passerror").innerHTML = "";
-                return true;
+                
             }
         }
         function conformpassword()
@@ -146,16 +142,14 @@
             if(confpass=="")
             {
                 document.getElementById("confpasserror").innerHTML = "confirm password is Empty";
-                return false;
             }
             else if(password!=confpass)
             {
                 document.getElementById("confpasserror").innerHTML = " password not match";
-                return false;
             }
             else {
                 document.getElementById("confpasserror").innerHTML = "";
-                return true;
+                
             }
         }
         function state()
@@ -164,11 +158,10 @@
             if(state=="")
             {
                 document.getElementById("stateerror").innerHTML = " state is empty";
-                return false;
             }
             else {
                 document.getElementById("stateerror").innerHTML = "";
-                return true;
+                
             }
         }
         function number()
@@ -177,31 +170,28 @@
             if(number=="")
             {
                 document.getElementById("numbererror").innerHTML = " number is empty";
-                return false;
             }
             else if(number.length!=10)
             {
                 document.getElementById("numbererror").innerHTML = " number is wrong";
-                return false;
             }
             else if(isNaN(number))
             {
                 document.getElementById("numbererror").innerHTML = " enter number value only";
-                return false;
+
             }
             else {
                 document.getElementById("numbererror").innerHTML = "";
-                return true;
+                
             }
         }
         function validate() {
           
             name();
             email();
+            number();
             password();
             conformpassword();
-            state();
-            return number();
         }
 
             function loginemail()
@@ -505,7 +495,7 @@
                                <div id="confpasserror" class="errormsg"></div>
                  </div>
             <div class="input-group">
-                <asp:Button ID="btnsignup" runat="server" Text="Sign Up" CssClass="btn1"  OnClientClick="return validate()" />
+                <asp:Button ID="btnsignup" runat="server" Text="Sign Up" CssClass="btn1"  OnClientClick="return validate();" />
             </div>
             </div>
            
