--- a/MasterPage.master
+++ b/MasterPage.master
@@ -452,13 +452,13 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
          <ul class="nav nav-tabs" style="border-bottom:none;">
-    <li class="active"><a data-toggle="tab" href="#home" >Sign Up</a></li>
-    <li><a data-toggle="tab" href="#menu1">Login</a></li>
+    <li class="active" id="navsignup" runat="server"><a data-toggle="tab" href="#home" >Sign Up</a></li>
+    <li id="navlogin" runat="server"><a data-toggle="tab" href="#menu1">Login</a></li>
     
   </ul>
 
   <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
+    <div id="home" class="tab-pane fade in active" runat="server">
        <div class="row">
         <div class="col-md-12">
 
@@ -495,13 +495,13 @@
                                <div id="confpasserror" class="errormsg"></div>
                  </div>
             <div class="input-group">
-                <asp:Button ID="btnsignup" runat="server" Text="Sign Up" CssClass="btn1"  OnClientClick="return validate();" />
+                <asp:Button ID="btnsignup" runat="server" Text="Sign Up" CssClass="btn1"  OnClientClick="return validate();" OnClick="btnsignup_Click" />
             </div>
             </div>
            
             
          </div>
-     <div id="menu1" class="tab-pane fade">
+     <div id="menu1" class="tab-pane fade" runat="server">
          <div class="row">
              <div class="col-md-12">
                  <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">LOGIN</h3>
