--- a/MasterPage.master
+++ b/MasterPage.master
@@ -195,6 +195,13 @@
             number();
             password();
             conformpassword();                
+            if(name() && email() && email() && number() && password() && conformpassword())
+            {
+                return true;
+            }
+            else {
+                return false;
+            }
         }
 
             function loginemail()
