--- a/MasterPage.master
+++ b/MasterPage.master
@@ -96,6 +96,53 @@
         #navlogin {
             font-size: 18px;
         }
+                .signinbtn {
+   
+   // color: #000;
+    padding: 16px;
+    //font-size: 16px;
+    border: none;
+   // cursor: pointer;
+	text-decoration:none;
+}
+.dropdown-signin {
+    position: relative;
+    display: inline-block;
+	margin:0px 0px 0px 0px;
+          cursor:pointer;
+		//  font-size:16px;
+		 // font-family:verdana;
+		  
+}
+
+.dropdown-signin-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+	margin:10px 0px 0px 10px;
+}
+
+.dropdown-signin-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size:16px;
+}
+
+.dropdown-signin-content a:hover {background-color: #f1f1f1}
+
+.dropdown-signin:hover .dropdown-signin-content {
+    display: block;
+}
+
+.dropdown-signin:hover .signinbtn {
+    background-color: ;
+	
+}
     </style>
     <script>
         $(document).ready(function () {
@@ -270,7 +317,17 @@
                             </li>
                             <li><a href="gallery.aspx">Gallery</a></li>
                             <li><a href="#">Contact</a></li>
-                            <li><a href="#" data-toggle="modal" data-target="#myModal2">Login</a></li>
+                            <li class="dropdown-signin">  
+       <a href="#" data-toggle="modal" data-target="#myModal2" class="signinbtn">Login</a>
+         <div class="dropdown-signin-content">
+           <a href="#">My Account</a>
+           <a href="#">My Order</a>
+           <a href="#">My Returns</a>
+	       <a href="#">My Feedback</a>
+             <a href="#">Logout</a>
+       </div>  
+      
+                 </li>         
                         </ul>
 
                     </nav>
